--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "fastapi>=0.129.0",
     "pyjwt>=2.11.0",
     "python-dotenv>=1.2.1",
+    "razorpay>=2.0.0",
     "sqlmodel>=0.0.35",
     "uvicorn>=0.41.0",
 ]
