--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "pyjwt>=2.11.0",
     "python-dotenv>=1.2.1",
     "razorpay>=2.0.0",
+    "resend>=2.23.0",
     "sqlmodel>=0.0.35",
     "uvicorn>=0.41.0",
 ]
